--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -40,3 +40,7 @@
 <div id="projectList">
     @Html.Partial("List")
 </div>
+
+<script type="text/javascript">
+    document.title = '@ViewBag.Title';
+</script>
