--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -78,18 +78,6 @@ body {
         .navbar-right > li a:hover {
             background: #505b69;
         }
-
-    .main-menu > li > a {
-        display: block;
-        font-weight: 500;
-        color: white;
-        margin-right: 7px;
-    }
-
-        .main-menu > li > a:hover,
-        .main-menu > li > a:focus {
-            background-color: #505b69;
-        }
 }
 
 .navbar {
@@ -156,6 +144,42 @@ body {
     align-self: flex-start;
 }
 
+.titleLink {
+    font-size: 18px;
+    text-align: left;
+    color: #006186;
+    margin-left: 15px;
+    text-decoration: none;
+    width: auto;
+    position: relative;
+    text-align: left;
+    align-self: center;
+}
+
+    .titleLink:after {
+        height: 3px;
+        width: 100%;
+        background: #d41955;
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        transition: all .3s;
+        transform: scaleX(0);
+    }
+
+    .titleLink:hover:after {
+        transform: scaleX(1);
+    }
+
+    .titleLink:hover {
+        color: #d41955 !important;
+    }
+
+.titleLink-small {
+    font-size: 16px;
+}
+
 .properties {
     width: 100%;
     display: flex;
@@ -170,7 +194,7 @@ body {
     }
 
     .properties:hover {
-        background-color: #e6e6e6;
+        background-color: #ffffff63;
     }
 
     .properties > div {
@@ -186,32 +210,7 @@ body {
             border-right: none;
         }
 
-        .properties > div:first-child a {
-            color: black;
-            text-decoration: none;
-            width: auto;
-            margin-left: 5px;
-            position: relative;
-            text-align: left;
-            font-size: 20px;
-            align-self: center;
-        }
 
-            .properties > div:first-child a:after {
-                height: 3px;
-                width: 100%;
-                background: #d41955;
-                content: "";
-                position: absolute;
-                left: 0px;
-                bottom: 0;
-                transition: all .3s;
-                transform: scaleX(0);
-            }
-
-            .properties > div:first-child a:hover:after {
-                transform: scaleX(1);
-            }
 
         .properties > div span {
             margin: auto;
@@ -543,13 +542,3 @@ body {
         .dynamic-block-add-stage > form div label {
             width: 150px;
         }
-
-.titleLink {
-    text-align: left !important;
-    color: #006186 !important;
-    padding: 0 10px 0 10px;
-}
-
-    .titleLink:hover {
-        color: #d41955 !important;
-    }
