--- a/TranslationReg/Views/Analytics/Filters.cshtml
+++ b/TranslationReg/Views/Analytics/Filters.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TranslationReg.Models.ReportModel
+@{ViewBag.Title = "Отчеты";}
 <div class="dynamic-block-create">
     @using (Html.BeginForm("FormReport", "Analytics", FormMethod.Post))
     {
@@ -32,7 +33,7 @@
 
         <div class="form-group">
             @Html.Label("Проект")
-                @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+            @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         </div>
 
         <div class="form-group">
@@ -119,4 +120,7 @@
             document.getElementById("dateFrom").value = "@(BefMonthPeriod()[0].ToString("yyyy-MM-dd"))";
             document.getElementById("dateTo").value  =  "@(BefMonthPeriod()[1].ToString("yyyy-MM-dd"))";
         }
+
+    // Название вкладки
+    document.title = '@ViewBag.Title';
 </script>
