--- a/TranslationReg/Views/Home/About.cshtml
+++ b/TranslationReg/Views/Home/About.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "О программе";
 }
-<h3>@ViewBag.Message</h3>
-
+<h3>О программе</h3>
 <p>Данный сайт преназначен для учета переводов документов</p>
+
+<script type="text/javascript">
+    document.title = '@ViewBag.Title';
+</script>
