--- a/TranslationReg/Views/Search/SearchResults.cshtml
+++ b/TranslationReg/Views/Search/SearchResults.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TranslationReg.Models.SearchDocsAndProjectsModel
+@{ViewBag.Title = "Результаты поиска";}
 <div>
     @{
         var projectsFound = Model.Projects != null && Model.Projects.Count != 0;
@@ -22,3 +23,7 @@
         }
     }
 </div>
+
+<script type="text/javascript">
+    document.title = '@ViewBag.Title';
+</script>
