--- a/TranslationReg/Views/Account/Login.cshtml
+++ b/TranslationReg/Views/Account/Login.cshtml
@@ -1,32 +1,48 @@
 ﻿@model TranslationReg.Models.LoginModel
-
 @{
     ViewBag.Title = "Авторизация";
+    Layout = null;
 }
 
-<h2>Авторизация</h2>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    @Styles.Render("~/Style/css")
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+</head>
+<body>
+    <div class="content-container padding-container">
+        <h2>Авторизация</h2>
+        <div class="dynamic-block-create">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-    <div class="dynamic-block-create">
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-        
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, "Логин" )
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, "Логин")
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password,"Пароль" )
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-        </div>
-
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Password, "Пароль")
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
 
                 <input type="submit" value="Авторизоваться" class="btn btn-default btn-form" />
-
-}
+                <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
+            }
+        </div>
     </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
+</body>
+
+<style>
+</style>
