--- a/TranslationReg/Views/Search/SearchResults.cshtml
+++ b/TranslationReg/Views/Search/SearchResults.cshtml
@@ -1,5 +1,6 @@
 ﻿@model TranslationReg.Models.SearchDocsAndProjectsModel
 @{ViewBag.Title = "Результаты поиска";}
+<h2>Результаты поиска</h2>
 <div>
     @{
         var projectsFound = Model.Projects != null && Model.Projects.Count != 0;
