--- a/TranslationReg/Views/Account/Login.cshtml
+++ b/TranslationReg/Views/Account/Login.cshtml
@@ -34,8 +34,10 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
 
-                <input type="submit" value="Авторизоваться" class="btn btn-default btn-form" />
-                <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
+                <div>
+                    <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
+                    <input type="submit" value="Войти" class="btn btn-default btn-form" style="float:left; margin-left:100px;"/>
+                </div>
             }
         </div>
     </div>
