--- a/TranslationReg/Views/UnitOfMeasure/EditCard.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/EditCard.cshtml
@@ -8,7 +8,7 @@
         <div class="card-header orange-header">
             <p>Редактировать единицу измерения</p>
             <div>
-                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#unitOfMeasure@(Model.Id)" data-href="/UnitOfMeasure/Card/@Model.Id">undo</i>
             </div>
         </div>
 
