--- a/TranslationReg/Views/WorkTypes/AddCard.cshtml
+++ b/TranslationReg/Views/WorkTypes/AddCard.cshtml
@@ -8,7 +8,7 @@
         <div class="card-header">
             <p>Доб. тип работ</p>
             <div>
-                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                @*<i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#workType@(Model.workType.Id)" data-href="/WorkTypes/Card/@Model.workType.Id">undo</i>*@
             </div>
         </div>
 
