--- a/TranslationReg/Views/LanguagePairs/AddCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/AddCard.cshtml
@@ -10,7 +10,7 @@
         <div class="card-header">
             <p>Добавить языковую пару</p>
             <div>
-                <a href="/Languages/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                @*<i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#languagePair@(Model.languagePair.Id)" data-href="/LanguagePairs/Card/@Model.languagePair.Id">undo</i>*@
             </div>
         </div>
 
