--- a/TranslationReg/Views/Languages/AddCard.cshtml
+++ b/TranslationReg/Views/Languages/AddCard.cshtml
@@ -8,7 +8,7 @@
         <div class="card-header">
             <p>Добавить язык</p>
             <div>
-                <a href="/Languages/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                @*<i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#language@(Model.Id)" data-href="/Languages/Card/@Model.Id">undo</i>*@
             </div>
         </div>
 
