--- a/TranslationReg/Views/ProjectStatuse/AddCard.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/AddCard.cshtml
@@ -7,7 +7,7 @@
         <div class="card-header">
             <p>Добавить статус</p>
             <div>
-                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                @*<i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#projectStatuse@(Model.Id)" data-href="/ProjectStatuse/Card/@Model.Id">undo</i>*@
             </div>
         </div>
 
