--- a/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
@@ -9,7 +9,7 @@
         <div class="card-header">
             <p>Редактировать статус</p>
             <div>
-                <a href="/Worktypes/Cards" style="display:flex; text-decoration:none"><i class="material-icons card-btn">undo</i></a>
+                <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#projectStatuse@(Model.Id)" data-href="/ProjectStatuse/Card/@Model.Id">undo</i>
             </div>
         </div>
 
