--- a/TranslationReg/Views/DocStages/Item.cshtml
+++ b/TranslationReg/Views/DocStages/Item.cshtml
@@ -9,7 +9,7 @@
             <a data-ajax-update="#addUserStageForm@(Model.Id)" data-href="/User_Stage/Create/@Model.Id" id="addWork" class="btn btn-primary ajaxToggleBtn">Добавить исполнителя</a>
         </div>
         <div class="control small">
-            <a class="btn btn-danger deleteBtn" href="/DocStages/Delete/@Model.Id" id="deleteWork" data-dialog-title="Удаление стадии">Удалить стадию</a>
+            <a class="btn btn-danger deleteBtn" data-href="/DocStages/Delete/@Model.Id" id="deleteWork" data-dialog-title="Удаление стадии">Удалить стадию</a>
         </div>
     </div>
 </div>
