правки отступов, размеров. Возможность загружать большие файлы

--- a/TranslationReg/Views/Account/Register.cshtml
+++ b/TranslationReg/Views/Account/Register.cshtml
@@ -46,8 +46,8 @@
                 <input type="file" name="avatar" accept="image/*" />
             </div>
             <div>
-                <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-form" />
-                <a href="/Account/Login" class="btn btn-default btn-form" style="float:left; margin-left:100px;">К авторизации</a>
+                <a href="/Account/Login" class="btn btn-default btn-form">К авторизации</a>
+                <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-form" style="float:left; margin-left:100px;"/>
             </div>
         }
     </div>
